@@ -4,15 +4,15 @@ import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.InputMultiplexer;
 import com.badlogic.gdx.Screen;
 import com.badlogic.gdx.graphics.GL20;
+import com.badlogic.gdx.graphics.OrthographicCamera;
 import com.badlogic.gdx.input.GestureDetector;
+import com.badlogic.gdx.math.MathUtils;
+import com.badlogic.gdx.math.Vector3;
 import com.badlogic.gdx.scenes.scene2d.Stage;
 import com.badlogic.gdx.utils.viewport.ExtendViewport;
 import com.badlogic.gdx.utils.viewport.Viewport;
 import com.colegiovivas.lapandemia.LaPandemia;
-import com.colegiovivas.lapandemia.gameplay.MovePlayerGestureListener;
-import com.colegiovivas.lapandemia.gameplay.PlayerActor;
-import com.colegiovivas.lapandemia.gameplay.FanActor;
-import com.colegiovivas.lapandemia.gameplay.WallActor;
+import com.colegiovivas.lapandemia.gameplay.*;
 import com.colegiovivas.lapandemia.level.Level;
 
 public class GameScreen implements Screen {
@@ -21,12 +21,14 @@ public class GameScreen implements Screen {
     private final Viewport viewport;
     private final Stage stage;
     private final PlayerActor playerActor;
+    private final OrthographicCamera camera;
 
     public GameScreen(final LaPandemia parent, final Level level) {
         this.parent = parent;
         this.level = level;
 
-        viewport = new ExtendViewport(LaPandemia.V_WIDTH, LaPandemia.V_HEIGHT);
+        camera = new OrthographicCamera();
+        viewport = new ExtendViewport(LaPandemia.V_WIDTH, LaPandemia.V_HEIGHT, camera);
         stage = new Stage(viewport);
 
         playerActor = new PlayerActor(level.startX, level.startY, parent);
@@ -45,6 +47,9 @@ public class GameScreen implements Screen {
     public void show() {
         InputMultiplexer multiplexer = new InputMultiplexer();
         multiplexer.addProcessor(stage);
+        // ZoomGestureListener debe ir antes de MovePlayerGestureListener, ya que el primero
+        // decide quién de los dos debe procesar los gestos tap.
+        multiplexer.addProcessor(new GestureDetector(new ZoomGestureListener(this)));
         multiplexer.addProcessor(new GestureDetector(new MovePlayerGestureListener(playerActor)));
         Gdx.input.setInputProcessor(multiplexer);
     }
@@ -61,19 +66,35 @@ public class GameScreen implements Screen {
         stage.draw();
     }
 
+    public void zoom(float delta) {
+        float newZoom = MathUtils.clamp(camera.zoom + delta, 1f, 3f);
+        // Multiplicando una distancia en unidades del mundo por el zoom obtenemos su
+        // distancia en píxeles de pantalla. Sabiendo esto, nos aseguramos de que el
+        // nuevo zoom no sea tan grande que el mapa entero se quede pequeño en alguno
+        // de los dos ejes de coordenadas. Esto es necesario para que adjustCamera()
+        // pueda averiguar con seguridad y sin tener que manipular el zoom unas
+        // coordenadas de la cámara que centren al personaje lo máximo posible sin
+        // salir de los límites del mapa.
+        if (LaPandemia.V_WIDTH * newZoom <= level.width
+            && LaPandemia.V_HEIGHT * newZoom <= level.height)
+        {
+            camera.zoom = newZoom;
+        }
+    }
+
     private void adjustCamera() {
         // Se muestra siempre el mayor espacio posible alrededor del personaje, pero sin
         // hacer scroll más allá de los límites del mapa. Cuando el personaje no está
         // cerca de los bordes, aparece en el centro de la pantalla.
-        float leftBound = LaPandemia.V_WIDTH/2;
-        float rightBound = level.width - LaPandemia.V_WIDTH/2;
-        float lowerBound = LaPandemia.V_HEIGHT/2 + 1;
-        float upperBound = level.height - LaPandemia.V_HEIGHT/2 - 1;
+        float leftBound = LaPandemia.V_WIDTH*camera.zoom/2;
+        float rightBound = level.width - leftBound;
+        float lowerBound = camera.zoom*LaPandemia.V_HEIGHT/2 + 1;
+        float upperBound = level.height - lowerBound;
         float xToCenter = playerActor.getX() + playerActor.getWidth()/2;
         float yToCenter = playerActor.getY() + playerActor.getHeight()/2;
 
-        stage.getCamera().position.x = Math.min(rightBound, Math.max(leftBound, xToCenter));
-        stage.getCamera().position.y = Math.min(upperBound, Math.max(lowerBound, yToCenter));
+        camera.position.x = MathUtils.clamp(xToCenter, leftBound, rightBound);
+        camera.position.y = MathUtils.clamp(yToCenter, lowerBound, upperBound);
     }
 
     @Override
